--- a/package.json
+++ b/package.json
@@ -49,14 +49,18 @@
     "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-table": "^8.21.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
     "@types/papaparse": "^5.3.15",
     "@types/react-input-mask": "^3.0.6",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "express": "^5.1.0",
     "framer-motion": "^12.4.7",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
